tuzatishlar qo'shildi
